--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="WpfApplicationTest1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="地图数据生成器" Height="600" Width="800"
+        xmlns:main="WpfApplicationTest1.ToolControls"
+        Title="地图数据生成器" Height="444" Width="616"
         SizeToContent="WidthAndHeight"
+        Background="#FAFAFAFA"
         >
     <Window.Resources>
         <Style TargetType="WrapPanel" x:Key="WrapStack">
@@ -22,12 +23,12 @@
             </WrapPanel>
             <WrapPanel Style="{StaticResource WrapStack}" >
                 <Label Content="图片缩放因子"/>
-                <TextBox x:Name="TBoxScale" Width="118" TextChanged="TBoxScale_TextChanged_1"/>
+                <TextBox x:Name="TBoxScale" Width="118" TextChanged="TBoxScale_TextChanged"/>
             </WrapPanel>
             <WrapPanel Style="{StaticResource WrapStack}">
                 <Label Content="图格大小"/>
-                <TextBox Width="70" />
-                <Button Content="生成" Width="72"/>
+                <TextBox x:Name="TBoxCell" Width="70" TextChanged="TBoxCell_TextChanged"/>
+                <Button Content="生成" Width="72" Click="Button_Click_Generate_Cell"/>
             </WrapPanel>
             <WrapPanel Style="{StaticResource WrapStack}">
                 <Button Width="100">导入cell list json</Button>
@@ -44,12 +45,13 @@
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="1*"></ColumnDefinition>
                             <ColumnDefinition Width="3*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        
+
                         <Label Grid.Row="0" Grid.Column="0" Content="Name"></Label>
                         <TextBox Grid.Row="0" Grid.Column="1" Margin="0 2 0 2"></TextBox>
 
@@ -64,6 +66,11 @@
 
                         <Label Grid.Row="4" Grid.Column="0" Content="Other"></Label>
                         <TextBox Grid.Row="4" Grid.Column="1" Margin="0 2 0 2"></TextBox>
+
+                        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+                            <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0">自动应用</CheckBox>
+                            <Button Width="130">应用</Button>
+                        </StackPanel>
                     </Grid>
                 </StackPanel>
             </WrapPanel>
@@ -71,9 +78,13 @@
                 <Label Content="###TODO cell list 选择窗口###"></Label>
             </StackPanel>
         </StackPanel>
-        <StackPanel>
-            <Image x:Name="BackgroundImage"/>
-        </StackPanel>
-        
+        <Canvas x:Name="ImageCanvas" Margin="5,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Image x:Name= "BackgroundImage" Margin="5 0 0 0" VerticalAlignment="Top" HorizontalAlignment="Left" SizeChanged="BackgroundImage_SizeChanged">
+                <!-- 在这里初始化变换 -->
+                <Image.RenderTransform>
+                    <ScaleTransform/>
+                </Image.RenderTransform>
+            </Image>
+        </Canvas>
     </StackPanel>
 </Window>
