添加MapJson实体类

--- a/WpfApplicationTest1/ToolControls/ToolControls.xaml
+++ b/WpfApplicationTest1/ToolControls/ToolControls.xaml
@@ -1,14 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- Button资源 -->
+    <!-- ToolButton Button资源 -->
     <ControlTemplate x:Key="ToolButton" TargetType="Button">
         <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="1,1,1,1">
-            <TextBlock Text="{TemplateBinding Content}" Foreground="{TemplateBinding Foreground}"/>
+            <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter TargetName="border" Property="Background" Value="#7FD8D8D8"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter TargetName="border" Property="Background" Value="#B2959595"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
