--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:main="WpfApplicationTest1.ToolControls"
-        Title="地图数据生成器" Height="444" Width="616"
+        Title="地图数据生成器" Height="585" Width="616"
         SizeToContent="WidthAndHeight"
         Background="#FAFAFAFA"
         >
@@ -31,7 +31,7 @@
                 <Button Content="生成" Width="72" Click="Button_Click_Generate_Cell"/>
             </WrapPanel>
             <WrapPanel Style="{StaticResource WrapStack}">
-                <Button Width="100">导入cell list json</Button>
+             
                 <Button Width="100">生成map json</Button>
             </WrapPanel>
             <WrapPanel>
@@ -69,15 +69,33 @@
 
                         <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                             <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0">自动应用</CheckBox>
-                            <Button Width="130">应用</Button>
+                            <Button Width="130">添加cell</Button>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
             </WrapPanel>
             <StackPanel>
-                <Label Content="###TODO cell list 选择窗口###"></Label>
+                <Label Content="---CELL选择---" HorizontalAlignment="Center"></Label>
                 <WrapPanel>
+                    <Button Width="100">导入cell list json</Button>
+                    <Button Width="100">
+                        <Button.Background>
+                            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                                <GradientStop Color="#FFF3F3F3" Offset="0"/>
+                                <GradientStop Color="#FFEBEBEB" Offset="0.14"/>
+                                <GradientStop Color="#FFCF8F8F" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Button.Background> 删除</Button>
                 </WrapPanel>
+                <ListBox Height="200">
+                    <ListBoxItem>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                            </Grid.RowDefinitions>
+                            <Rectangle Width="48" Height="48" Fill="#FFF9D6A7"></Rectangle>
+                        </Grid>
+                    </ListBoxItem>
+                </ListBox>
             </StackPanel>
         </StackPanel>
         <Canvas x:Name="ImageCanvas" Margin="5,0" VerticalAlignment="Top" HorizontalAlignment="Left">
