--- a/WpfApplicationTest1/App.xaml
+++ b/WpfApplicationTest1/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="WpfApplicationTest1.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:System="clr-namespace:System;assembly=System" x:Class="WpfApplicationTest1.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
