--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfApplicationTest1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:main="WpfApplicationTest1.ToolControls"
+        xmlns:tool="clr-namespace:WpfApplicationTest1.ToolControls"
         Title="地图数据生成器" Height="585" Width="616"
         SizeToContent="WidthAndHeight"
         Background="#FAFAFAFA"
@@ -69,7 +69,7 @@
 
                         <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                             <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0">自动应用</CheckBox>
-                            <Button Width="130">添加cell</Button>
+                            <Button Width="130">添加/修改</Button>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
@@ -88,13 +88,7 @@
                         </Button.Background> 删除</Button>
                 </WrapPanel>
                 <ListBox Height="200">
-                    <ListBoxItem>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                            </Grid.RowDefinitions>
-                            <Rectangle Width="48" Height="48" Fill="#FFF9D6A7"></Rectangle>
-                        </Grid>
-                    </ListBoxItem>
+                    <tool:ToolListItem></tool:ToolListItem>
                 </ListBox>
             </StackPanel>
         </StackPanel>
