--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:tool="clr-namespace:WpfApplicationTest1.ToolControls"
-        Title="地图数据生成器" Height="588" Width="616"
+        Title="地图数据生成器" Height="615" Width="616"
         SizeToContent="WidthAndHeight"
         Background="#FAFAFAFA"
         >
@@ -31,7 +31,7 @@
                 <Button Content="生成" Width="72" Click="Button_Click_Generate_Cell"/>
             </WrapPanel>
             <WrapPanel Style="{StaticResource WrapStack}">
-             
+                <Button Width="100">导入map json</Button>
                 <Button Width="100">生成map json</Button>
             </WrapPanel>
             <WrapPanel>
@@ -55,13 +55,13 @@
                         <Label Grid.Row="0" Grid.Column="0" Content="Name"></Label>
                         <TextBox Grid.Row="0" Grid.Column="1" Margin="0 2 0 2"></TextBox>
 
-                        <Label Grid.Row="1" Grid.Column="0" Content="AVO"></Label>
+                        <Label Grid.Row="1" Grid.Column="0" Content="AVO" Foreground="#FFFF9700"></Label>
                         <TextBox Grid.Row="1" Grid.Column="1" Margin="0 2 0 2"></TextBox>
 
-                        <Label Grid.Row="2" Grid.Column="0" Content="DEF"></Label>
+                        <Label Grid.Row="2" Grid.Column="0" Content="DEF" Foreground="#FF0C00FF"></Label>
                         <TextBox Grid.Row="2" Grid.Column="1" Margin="0 2 0 2"></TextBox>
 
-                        <Label Grid.Row="3" Grid.Column="0" Content="ALT"></Label>
+                        <Label Grid.Row="3" Grid.Column="0" Content="ALT" Foreground="Red"></Label>
                         <TextBox Grid.Row="3" Grid.Column="1" Margin="0 2 0 2"></TextBox>
 
                         <Label Grid.Row="4" Grid.Column="0" Content="Other"></Label>
@@ -82,12 +82,14 @@
                         <Button.Background>
                             <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                                 <GradientStop Color="#FFF3F3F3" Offset="0"/>
-                                <GradientStop Color="#FFEBEBEB" Offset="0.14"/>
-                                <GradientStop Color="#FFCF8F8F" Offset="1"/>
+                                <GradientStop Color="#FFEBEBEB"/>
+                                <GradientStop Color="#FFF7A4A4" Offset="0.993"/>
                             </LinearGradientBrush>
-                        </Button.Background> 删除</Button>
+                        </Button.Background> 删除
+                    </Button>
                 </WrapPanel>
-                <ListBox Height="200" Margin="0 5 0 0" x:Name="CellListBox"></ListBox>
+                <Label  Content="celllist 名字" Margin="0 5 0 0" HorizontalAlignment="Center" x:Name="listName"></Label>
+                <ListBox Height="200"  x:Name="CellListBox"></ListBox>
             </StackPanel>
         </StackPanel>
         <Canvas x:Name="ImageCanvas" Margin="5,0" VerticalAlignment="Top" HorizontalAlignment="Left">
