--- a/WpfApplicationTest1/ToolControls/ToolListItem.xaml
+++ b/WpfApplicationTest1/ToolControls/ToolListItem.xaml
@@ -15,18 +15,20 @@
             <ColumnDefinition Width="48"></ColumnDefinition>
             <ColumnDefinition Width="48"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Rectangle Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Fill="#FFCFDCE8" Width="48" Height="48"></Rectangle>
-        <Label Grid.Row="0" Grid.Column="1" x:Name="name">name</Label>
-        <Rectangle Grid.Row="0" Grid.Column="1" Width="8" Height="4" Fill="#FF666060" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-        </Rectangle>
-        <Label Grid.Row="0" Grid.Column="2" x:Name="avo">avo</Label>
-        <Rectangle Grid.Row="0" Grid.Column="2" Width="8" Height="4" Fill="#FFE6BC72" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-        </Rectangle>
-        <Label Grid.Row="1" Grid.Column="1" x:Name="def">def</Label>
-        <Rectangle Grid.Row="1" Grid.Column="1" Width="8" Height="4" Fill="#FF6C7BDC" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-        </Rectangle>
-        <Label Grid.Row="1" Grid.Column="2" x:Name="alt" >alt</Label>
-        <Rectangle Grid.Row="1" Grid.Column="2" Width="8" Height="4" Fill="#FFE66060" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-        </Rectangle>
+        
+        <Label Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Background="#FFCFDCE8" Width="48" Height="48" x:Name="indexer">1</Label>
+        
+        <Label Grid.Row="0" Grid.Column="1" x:Name="lName">name</Label>
+        <Label Grid.Row="0" Grid.Column="1" Width="16" Height="4" Padding="0" FontSize="4" Background="#FF666060" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+        </Label>
+        <Label Grid.Row="0" Grid.Column="2" x:Name="lAvo">avo</Label>
+        <Label Grid.Row="0" Grid.Column="2" Width="16" Height="4" Background="#FFE6BC72" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+        </Label>
+        <Label Grid.Row="1" Grid.Column="1" x:Name="lDef">def</Label>
+        <Label Grid.Row="1" Grid.Column="1" Width="16" Height="4" Background="#FF6C7BDC" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+        </Label>
+        <Label Grid.Row="1" Grid.Column="2" x:Name="lAlt" >alt</Label>
+        <Label Grid.Row="1" Grid.Column="2" Width="16" Height="4" Background="#FFE66060" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+        </Label>
     </Grid>
 </ListBoxItem>
