--- a/WpfApplicationTest1/ToolControls/ToolControls.xaml
+++ b/WpfApplicationTest1/ToolControls/ToolControls.xaml
@@ -3,8 +3,9 @@
     <!-- ToolButton Button资源 -->
     <ControlTemplate x:Key="ToolButton" TargetType="Button">
         <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="1,1,1,1">
-            <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            BorderThickness="0">
+            <ContentPresenter Content="{TemplateBinding Content}"                              
+                              HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
