--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:tool="clr-namespace:WpfApplicationTest1.ToolControls"
-        Title="地图数据生成器" Height="615" Width="616"
+        Title="地图数据生成器" Height="675" Width="616"
         SizeToContent="WidthAndHeight"
         Background="#FAFAFAFA"
         >
@@ -53,23 +53,23 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Row="0" Grid.Column="0" Content="Name"></Label>
-                        <TextBox Grid.Row="0" Grid.Column="1" Margin="0 2 0 2"></TextBox>
+                        <TextBox Grid.Row="0" Grid.Column="1" Margin="0 2 0 2" x:Name="TBoxName"></TextBox>
 
                         <Label Grid.Row="1" Grid.Column="0" Content="AVO" Foreground="#FFFF9700"></Label>
-                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0 2 0 2"></TextBox>
+                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0 2 0 2" x:Name="TBoxAVO"></TextBox>
 
                         <Label Grid.Row="2" Grid.Column="0" Content="DEF" Foreground="#FF0C00FF"></Label>
-                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0 2 0 2"></TextBox>
+                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0 2 0 2" x:Name="TBoxDEF"></TextBox>
 
                         <Label Grid.Row="3" Grid.Column="0" Content="ALT" Foreground="Red"></Label>
-                        <TextBox Grid.Row="3" Grid.Column="1" Margin="0 2 0 2"></TextBox>
+                        <TextBox Grid.Row="3" Grid.Column="1" Margin="0 2 0 2" x:Name="TBoxALT"></TextBox>
 
                         <Label Grid.Row="4" Grid.Column="0" Content="Other"></Label>
-                        <TextBox Grid.Row="4" Grid.Column="1" Margin="0 2 0 2"></TextBox>
+                        <TextBox Grid.Row="4" Grid.Column="1" Margin="0 2 0 2" x:Name="TBoxOTHER"></TextBox>
 
                         <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                             <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0">自动应用</CheckBox>
-                            <Button Width="130">添加/修改</Button>
+                            <Button Width="130" Click="Button_Click_Add_Modify">添加/修改</Button>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
@@ -89,7 +89,7 @@
                     </Button>
                 </WrapPanel>
                 <Label  Content="celllist 名字" Margin="0 5 0 0" HorizontalAlignment="Center" x:Name="listName"></Label>
-                <ListBox Height="200"  x:Name="CellListBox"></ListBox>
+                <ListBox Height="279"  x:Name="CellListBox"></ListBox>
             </StackPanel>
         </StackPanel>
         <Canvas x:Name="ImageCanvas" Margin="5,0" VerticalAlignment="Top" HorizontalAlignment="Left">
