--- a/WpfApplicationTest1/ToolControls/ToolListItem.xaml
+++ b/WpfApplicationTest1/ToolControls/ToolListItem.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="48" Width="Auto">
+             d:DesignHeight="48" Width="Auto"
+             >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
