--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -77,8 +77,9 @@
             <StackPanel>
                 <Label Content="---CELL选择---" HorizontalAlignment="Center"></Label>
                 <WrapPanel>
-                    <Button Width="100" Click="Import_Cell_List_Button_Click">导入cell list</Button>
-                    <Button Width="100">
+                    <Button Width="60" Click="Import_Cell_List_Button_Click">导入list</Button>
+                    <Button Width="60" Click="Import_Cell_List_Button_Click">导出list</Button>
+                    <Button Width="80">
                         <Button.Background>
                             <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                                 <GradientStop Color="#FFF3F3F3" Offset="0"/>
