--- a/WpfApplicationTest1/ToolControls/ToolListItem.xaml
+++ b/WpfApplicationTest1/ToolControls/ToolListItem.xaml
@@ -16,11 +16,11 @@
             <ColumnDefinition Width="48"></ColumnDefinition>
             <ColumnDefinition Width="48"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        
-        <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Width="48" Height="48" x:Name="indexer" Content="1" Click="ListItem_Indexer_Click">
+
+        <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Width="48" Height="48" x:Name="indexer" Content="1" Click="Button_Indexer_Click" Background="#FFCFDCE8">
             <Button.Template>
                 <ControlTemplate TargetType="Button" >
-                    <Border Background="#FFCFDCE8" Width="48" Height="48">
+                    <Border Background="{Binding Path=Background, RelativeSource={RelativeSource TemplatedParent}}" Width="48" Height="48">
                         <ContentPresenter Content="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"></ContentPresenter>
                     </Border>
                 </ControlTemplate>
