--- a/WpfApplicationTest1/ToolControls/ToolColorPicker.xaml
+++ b/WpfApplicationTest1/ToolControls/ToolColorPicker.xaml
@@ -4,7 +4,8 @@
         xmlns:xe="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="ToolColorPicker"
         SizeToContent="WidthAndHeight"
-        ResizeMode="NoResize"      
+        ResizeMode="NoResize"   
+        Closing="Window_Closing"
         >
     <StackPanel Background="#FFF7F7F7" Margin="5">
         <xe:ColorCanvas VerticalAlignment="Top" 
@@ -13,6 +14,6 @@
                         SelectedColorChanged="cCanvas_SelectedColorChanged"
                         >
         </xe:ColorCanvas>
-        <Button Content="确定" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,5"/>
+        <Button Content="确定" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,5" Click="OK_Button_Click"/>
     </StackPanel>
 </Window>
