修复BUG, 添加复选相应逻辑

--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -97,7 +97,7 @@
                 <ListBox Height="279"  x:Name="CellListBox"></ListBox>
             </StackPanel>
         </StackPanel>
-        <StackPanel Margin="5,0">
+        <StackPanel Margin="5,0" x:Name="ToolPanel" Visibility="Visible">
             <RadioButton  Width="28" Height="28" Margin="0, 5" IsChecked="True">
                 <RadioButton.Template>
                     <ControlTemplate TargetType="RadioButton">
@@ -118,7 +118,7 @@
                     </ControlTemplate>
                 </RadioButton.Template>
             </RadioButton>
-            <RadioButton  Width="28" Height="28" Margin="0, 5">
+            <RadioButton  Width="28" Height="28" Margin="0, 5" Checked="RadioButton_Checked_Multi_Selecte">
                 <RadioButton.Template>
                     <ControlTemplate TargetType="RadioButton">
                         <Border Cursor="Hand" x:Name="border">
@@ -142,7 +142,8 @@
             </RadioButton>
         </StackPanel>
         <Canvas x:Name="ImageCanvas" VerticalAlignment="Top" HorizontalAlignment="Left">
-            <Image x:Name= "BackgroundImage" Margin="0,5" VerticalAlignment="Top" HorizontalAlignment="Left" SizeChanged="BackgroundImage_SizeChanged">
+            <Image x:Name= "ShellImage" Margin="0,5"  VerticalAlignment="Top" HorizontalAlignment="Left" OpacityMask="Transparent"/>
+            <Image x:Name= "BackgroundImage" Margin="0,5" VerticalAlignment="Top" HorizontalAlignment="Left" SizeChanged="BackgroundImage_SizeChanged" Panel.ZIndex="5">
                 <!-- 在这里初始化变换 -->
                 <Image.RenderTransform>
                     <ScaleTransform/>
