--- a/WpfApplicationTest1/MainWindow.xaml
+++ b/WpfApplicationTest1/MainWindow.xaml
@@ -142,7 +142,10 @@
             </RadioButton>
         </StackPanel>
         <Canvas x:Name="ImageCanvas" VerticalAlignment="Top" HorizontalAlignment="Left">
-            <Rectangle x:Name= "ShellRectangle" Margin="0,5"  VerticalAlignment="Top" HorizontalAlignment="Left" Fill="Transparent"/>
+            <Rectangle x:Name= "ShellRectangle" Margin="0,5"  VerticalAlignment="Top" HorizontalAlignment="Left" Fill="Transparent" 
+                       MouseMove="ShellRectangle_MouseMove" MouseDown="ShellRectangle_MouseDown" 
+                       MouseUp="ShellRectangle_MouseUp"
+                       />
             <Image x:Name= "BackgroundImage" Margin="0,5" VerticalAlignment="Top" HorizontalAlignment="Left" SizeChanged="BackgroundImage_SizeChanged" Panel.ZIndex="5">
                 <!-- 在这里初始化变换 -->
                 <Image.RenderTransform>
